// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input snapshots > matches snapshot: Default 1`] = `
<div>
  <input
    class="flex h-9 w-full rounded-md border border-input bg-background px-3 py-1 text-sm shadow-sm transition-colors placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
    placeholder="Enter text..."
  />
</div>
`;

exports[`Input snapshots > matches snapshot: Disabled 1`] = `
<div>
  <input
    class="flex h-9 w-full rounded-md border border-input bg-background px-3 py-1 text-sm shadow-sm transition-colors placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
    disabled=""
    placeholder="Enter text..."
    value="Disabled value"
  />
</div>
`;
